Ensure that the NeverAvailabilityModel initializes.

Currently, the NeverAvailabilityModel ignores the call to Initialize.

This leads to issues with the In-Product Help demo mode which
requires the model to be initialized, which depended on the callback
passed to NeverAvailabilityModel::Initialize(...) to be invoked.

This CL therefore adds support for invoking the callback and setting
the ready flag for the NeverAvailabilityModel and updates the
tests to take this into account.

BUG=728292

Change-Id: Ia636d9e9f0490fe78a12d5fcdd7d128e7b410e26
Reviewed-on: https://chromium-review.googlesource.com/519104
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Tommy Nyquist <nyquist@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476104}
Former-commit-id: 9c02705b00898f8dd026c3ad9af909d0607526de